fixes #2 header visibility

--- a/layout/styles/layout.css
+++ b/layout/styles/layout.css
@@ -34,8 +34,13 @@
 
 /* Header --------------------------------------------------------------------------------------------------------------- */
 
-#header {
+.header {
+	position: fixed;
+	z-index: 100;
+	transition: all 1s ease-in-out;
+}
 
+#header {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
